[tool.poetry]
name = "airflow-docker-compose"
version = "0.1.0"
description = "Apache Airflow on Docker Compose"
authors = ["timsu27 <omg80827@gmail.com>"]
readme = "README.md"
packages = [{include = "airflow_docker_compose"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
apache-airflow = {version = "2.6.2", extras = ["celery"]}
pandas = "^2.0.3"
pydantic = "1.10.11"
psycopg2 = "^2.9.6"
redis = "^4.6.0"
pyarrow = "^12.0.1"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.1.1"
jupyter = "^1.0.0"
tqdm = "^4.64.1"
flake8 = "^6.0.0"
docopt-ng = "^0.8.1"
schema = "^0.7.5"
pytest-cov = "4.0.0"
coverage = {extras = ["toml"], version = "^7.2.3"}
pre-commit = "^3.2.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-config=.coveragerc --cov=forecaster"

[tool.flake8]
max-line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.pydocstyle]
match = '(?!test_|conftest).*\.py'

[pycodestyle]
max-line-length = 100
